--- a/src/styles/banner.module.css
+++ b/src/styles/banner.module.css
@@ -13,7 +13,7 @@
     color: var(--white-color);
 
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
 
     overflow: hidden;
@@ -46,6 +46,7 @@
 .banner-image {
     height: 100%;
     position: relative;
+    display: none;
     /* z-index: -1; */
 }
 
