Reset Password & Admin Login Password Added
Address Modified Support Added

--- a/backend/views/add-product.pug
+++ b/backend/views/add-product.pug
@@ -4,7 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Add Product 
-        link(rel="stylesheet", href="./css/add-product.css")
+        link(rel="stylesheet", href="../../css/add-product.css")
     body 
         .add-product_wrapper 
             .add-product_main 
