--- a/frontend/src/styles/form.module.css
+++ b/frontend/src/styles/form.module.css
@@ -26,3 +26,11 @@
     border-radius: 5px;
     border: none;
 }
+
+.homeText {
+    margin: 25px 0;
+}
+
+.homeText a {
+    text-decoration: none;
+}
